// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandLineRemainder parses an action input with remainder 1`] = `
Array [
  "### --title output: ###",
  "--title",
  "The title",
  "### remainder output: ###",
  "the",
  "remaining",
  "args",
]
`;

exports[`CommandLineRemainder parses an action input with remainder flagged options 1`] = `
Array [
  "### --title output: ###",
  "--title",
  "The title",
  "### remainder output: ###",
  "--",
  "--the",
  "remaining",
  "--args",
]
`;

exports[`CommandLineRemainder renders help text: global help 1`] = `
"usage: example [-h] [--verbose] <command> ...

An example project

Positional arguments:
  <command>
    run       does the job

Optional arguments:
  -h, --help  Show this help message and exit.
  --verbose   A flag that affects all actions

[bold]For detailed help about a specific command, use: example <command> -h[normal]
"
`;

exports[`CommandLineRemainder renders help text: run 1`] = `
"usage: example run [-h] [--title TEXT] ...

a longer description

Positional arguments:
  \\"...\\"         The action remainder

Optional arguments:
  -h, --help    Show this help message and exit.
  --title TEXT  A string
"
`;
